--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,5 +1,8 @@
 {% load static %}
 {% load bootstrap3 %}
+{% load utils %}
+{% settings_value "EVENT_NAME" as event_name %}
+{% settings_value "STATIC_KEYS_TEMPLATES" as static_values %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -11,18 +14,18 @@
             crossorigin="anonymous"></script>
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
     <meta name="theme-color" content="#03A9B5">
-    <meta name="author" content="Hackers@UPC">
-    <meta property="og:title" content="My HackUPC"/>
+    <meta name="author" content="{{ event_name }}">
+    <meta property="og:title" content="My {{ event_name }}"/>
     <link rel="icon" type="image/x-icon" href="{% static 'favicon.ico' %}"/>
-    <meta property="og:site_name" content="My HackUPC"/>
-    <meta name="description" content="Join us for BarcelonaTech's hackathon. 500 hackers. 36h. March 3rd-5th.">
-    <meta property="og:description" content="Join us for BarcelonaTech's hackathon. 500 hackers. 36h. March 3rd-5th."/>
+    <meta property="og:site_name" content="My {{ event_name }}"/>
+    <meta name="description" content="{{ static_values.description }}">
+    <meta property="og:description" content="{{ static_values.description }}"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Ek+Mukta" rel="stylesheet">
     {% block head %}
     {% endblock %}
 
-    <title>{% block title %}{% block head_title %}{% endblock %} - {% endblock %}My HackUPC</title>
+    <title>{% block title %}{% block head_title %}{% endblock %} - {% endblock %}My {{ event_name }}</title>
 </head>
 
 
@@ -38,7 +41,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/">My HackUPC</a>
+                <a class="navbar-brand" href="/">My {{ event_name }}</a>
             </div>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
