--- a/register/templates/confirm.html
+++ b/register/templates/confirm.html
@@ -1,11 +1,14 @@
 {% extends 'base.html' %}
 {% load static %}
+{% load utils %}
 {% block title %}Confirm application - {% endblock %}
 {% block head %}
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
 {% endblock %}
 
 {% block body %}
+    {% settings_value "STATIC_KEYS_TEMPLATES" as static_values %}
+    {% settings_value "EVENT_NAME" as event_name %}
 
     <div class="confirm-content">
         <div class="col-md-8 col-md-offset-2">
@@ -22,7 +25,7 @@
 
                     </div>
                     <div class="panel-footer">
-                        Please contact us if you think this is an error: <a href="mailto:contact@hackupc.com">contact@hackupc.com</a>
+                        Please contact us if you think this is an error: {{ static_values.email|urlize }}
                     </div>
                 </div>
 
@@ -38,7 +41,7 @@
                             You already confirmed your spot before, {{ hacker.name }}. But we love your enthusiasm
                             :)
                         {% else %}
-                            {{ hacker.name }}, you just confirmed your spot at HackUPC Spring 2017!
+                            {{ hacker.name }}, you just confirmed your spot at {{ event_name }}!
                         {% endif %}
                         We can't wait to have you here.
 
