--- a/register/templates/phases/invited.html
+++ b/register/templates/phases/invited.html
@@ -8,11 +8,11 @@
         If you can no longer attend please cancel your invite here.
         <a href="{% url 'cancel_app' %}" class="btn btn-block btn-danger">Cancel</a>
     {% elif application.is_cancelled %}
-        We are sorry that you can't come to HackUPC. We are looking forward to welcome you next edition.
+        We are sorry that you can't come to {{ event_name }}. We are looking forward to welcome you next edition.
         {% include 'include/subscribe_form.html' %}
     {% endif %}
 {% elif application.is_invited or application.is_last_reminder %}
-    <p>Congrats! You have been invited to come to HackUPC! Please respond this invite.
+    <p>Congrats! You have been invited to come to {{ event_name }}! Please respond this invite.
         {% if invite_deadline %}It will expire in {{ invite_deadline|timeuntil }}{% endif %}
     </p>
     <a href="{% url 'confirm_app' %}" class="btn btn-block btn-success">Confirm</a>
