--- a/app/templates/account/signup.html
+++ b/app/templates/account/signup.html
@@ -1,34 +1,17 @@
 {% extends "account/base.html" %}
 
 {% load i18n %}
-
+{% load bootstrap3 %}
 {% block head_title %}{% trans "Signup" %}{% endblock %}
 
 {% block content %}
-<h1><center>{% trans "Sign Up" %}</center></h1>
+<h1 class="text-center">{% trans "Sign Up" %}</h1>
 
 <p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
 
-<form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
+<form class="signup form-horizontal" id="signup_form" method="post" action="{% url 'account_signup' %}">
   {% csrf_token %}
-  <div class="form-group row">
-      <label for="id_login" class="col-sm-2 col-form-label">Email</label>
-      <div class="col-sm-10">
-        <input class="form-control" id="id_email" name="email" placeholder="E-mail address" type="email" required />
-      </div>
-  </div>
-  <div class="form-group row">
-      <label for="id_login" class="col-sm-2 col-form-label">Password</label>
-      <div class="col-sm-10">
-        <input class="form-control" id="id_password1" name="password1" placeholder="Password" type="password" required />
-      </div>
-  </div>
-  <div class="form-group row">
-      <label for="id_login" class="col-sm-2 col-form-label">Password (again)</label>
-      <div class="col-sm-10">
-        <input class="form-control" id="id_password2" name="password2" placeholder="Password (again)" type="password" required />
-      </div>
-  </div>
+  {% bootstrap_form form layout="horizontal" %}
   {% if redirect_field_value %}
   <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
   {% endif %}
