--- a/app/templates/account/email.html
+++ b/app/templates/account/email.html
@@ -1,7 +1,7 @@
 {% extends "account/base.html" %}
 
 {% load i18n %}
-
+{% load bootstrap3 %}
 {% block head_title %}{% trans "Account" %}{% endblock %}
 
 {% block content %}
@@ -31,9 +31,9 @@
   {% endfor %}
 
 <div class="buttonHolder">
-      <button class="secondaryAction" type="submit" name="action_primary" >{% trans 'Make Primary' %}</button>
-      <button class="secondaryAction" type="submit" name="action_send" >{% trans 'Re-send Verification' %}</button>
-      <button class="primaryAction" type="submit" name="action_remove" >{% trans 'Remove' %}</button>
+      <button class="secondaryAction btn btn-default" type="submit" name="action_primary" >{% trans 'Make Primary' %}</button>
+      <button class="secondaryAction btn btn-default"  type="submit" name="action_send" >{% trans 'Re-send Verification' %}</button>
+      <button class="primaryAction btn btn-default" type="submit" name="action_remove" >{% trans 'Remove' %}</button>
 </div>
 
 </fieldset>
@@ -47,10 +47,10 @@
 
     <h2>{% trans "Add E-mail Address" %}</h2>
 
-    <form method="post" action="{% url 'account_email' %}" class="add_email">
+    <form method="post" action="{% url 'account_email' %}" class="add_email form-horizontal">
         {% csrf_token %}
-        {{ form.as_p }}
-        <button name="action_add" type="submit">{% trans "Add E-mail" %}</button>
+        {% bootstrap_form form layout="horizontal" %}
+        <button name="action_add" class="btn btn-primary btn-block" type="submit">{% trans "Add E-mail" %}</button>
     </form>
 
 {% endblock %}
