--- a/app/templates/account/login.html
+++ b/app/templates/account/login.html
@@ -31,7 +31,10 @@
 
     {% else %}
         <p>{% blocktrans %}If you have not created an account yet, then please
-            <a href="{{ signup_url }}">sign up</a> first.{% endblocktrans %}</p>
+            <a href="{{ signup_url }}">sign up</a> first.{% endblocktrans %}
+            <a class="button secondaryAction"
+               href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
+        </p>
     {% endif %}
 
     <form class="login form-horizontal" method="POST" action="/accounts/login/">
