--- a/app/templates/account/password_change.html
+++ b/app/templates/account/password_change.html
@@ -1,15 +1,15 @@
 {% extends "account/base.html" %}
 
 {% load i18n %}
-
+{% load bootstrap3 %}
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
 {% block content %}
     <h1>{% trans "Change Password" %}</h1>
 
-    <form method="POST" action="{% url 'account_change_password' %}" class="password_change">
+    <form method="POST" action="{% url 'account_change_password' %}" class="password_change form-horizontal">
         {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit" name="action">{% trans "Change Password" %}</button>
+        {% bootstrap_form form layout="horizontal" %}
+        <button type="submit" class="btn btn-primary btn-block" name="action">{% trans "Change Password" %}</button>
     </form>
 {% endblock %}
