add email for reimbursement

--- a/register/templates/apply.html
+++ b/register/templates/apply.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
+{% load utils %}
 {% block head_title %}Apply{% endblock %}
 {% block body %}
+    {% settings_value 'REGISTER_APP' app_data %}
     {% if user.hacker %}
         {% if user.hacker.application_set.exists %}
             <h4 class="text-center margin-top" style="color: white;">You already applied</h4>
@@ -15,7 +17,7 @@
                 border: 0;
             }</style>
             <iframe id="typeform" width="100%" height="100%" frameborder="0"
-                    src="https://hackersatupc.typeform.com/to/KaZTUa?hacker_id={{ user.hacker.uuid }}&name={{ user.hacker.name }}&redirect_url={{ fetch_forms_url }}"></iframe>
+                    src="https://{{ app_data.typeform_user }}.typeform.com/to/{{ app_data.typeform_form }}?hacker_id={{ user.hacker.uuid }}&name={{ user.hacker.name }}&redirect_url={{ fetch_forms_url }}"></iframe>
             <script>
                 document.getElementById("typeform").contentWindow.focus()
             </script>
