add reimbursement info in views

--- a/register/templates/phases/attend.html
+++ b/register/templates/phases/attend.html
@@ -7,4 +7,5 @@
     <h3>When to arrive</h3>
     Registration opens at 3:00 pm and closes at 6:00 pm on Friday March 3rd, the opening ceremony
     will be at 7:00 pm.<br>
+    {% include 'include/reimbursement.html' %}
 </div>
