fix various bug after usability test

--- a/register/templates/register/mails/invitation_message.html
+++ b/register/templates/register/mails/invitation_message.html
@@ -15,7 +15,7 @@
     {% include 'include/email_line_end.html' %}
     {% if reimbursement %}
         {% include 'include/email_line_start.html' %}
-        Reimbursement will be sent in a separate email.
+        If you have been granted reimbursement you will receive a separate email with all the information in the next few hours.
         {% include 'include/email_line_end.html' %}
     {% endif %}
     {% include 'include/email_line_start.html' %}
