Tweak email confirmation text

--- a/app/templates/account/email/email_confirmation_message.html
+++ b/app/templates/account/email/email_confirmation_message.html
@@ -6,7 +6,7 @@
     {% include 'include/email_line_start.html' %}
     Hi there {{ user_display }},
     {% include 'include/email_line_end.html' %}
-    {% include 'include/email_line.html' with text="You're receiving this e-mail because a user has given yours as an e-mail address to connect their account in "|add:current_site.name %}
+    {% include 'include/email_line.html' with text="Once you confirm your email address you'll be able to use it to log in to your account at "|add:current_site.name %}
     {% include 'include/email_button.html' with text='activate' url=activate_url %}
 
     {% include 'include/email_line.html' with text="Best," %}
