--- a/register/templates/phases/fill_application.html
+++ b/register/templates/phases/fill_application.html
@@ -5,5 +5,5 @@
 {% elif not user.hacker %}
     You can't apply yet. Fill your hacker profile before
 {% else %}
-    <p>Your application has been received and it's being reviewed.</p>
+    <p>Your application has been received and it's being reviewed. You can still edit you hacker information.</p>
 {% endif %}
