--- a/register/templates/phases/invited.html
+++ b/register/templates/phases/invited.html
@@ -30,5 +30,5 @@
     </p>
     {#    Message inspired by HackTheNorth rejection email... Tries to be positive :D #}
 {% else %}
-    <p>We have received your application. We'll get back to you very soon.</p>
+    <p>We have received your application. We'll get back to you very soon. You can still edit you hacker information.</p>
 {% endif %}
