remove Barcelona from messages

--- a/register/templates/register/mails/include/closing.html
+++ b/register/templates/register/mails/include/closing.html
@@ -6,7 +6,7 @@ or message us on
 and
 <a href="{{ twitter }}" target="_blank">Twitter</a>.
 {% include 'include/email_line_end.html' %}
-{% include 'include/email_line.html' with text="See you soon in Barcelona!" %}
+{% include 'include/email_line.html' with text="See you soon!" %}
 {% include 'include/email_line.html' with text="Best," %}
 {% include 'include/email_line.html' with text="" %}
 {% include 'include/email_line.html' with text=current_site.name|add:" Team" %}
