--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -62,6 +62,7 @@
                         {% endif %}
                         {% if not perms.register.vote %}
                             <li class="white-text"><a href="{% url 'dashboard' %}">Dashboard</a></li>
+                            <li class="white-text"><a href="{% url 'profile' %}">Profile</a></li>
                         {% endif %}
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
@@ -71,6 +72,7 @@
                                 <li><a href="{% url 'account_change_password' %}">Change password</a></li>
                                 <li><a href="{% url 'account_email' %}">Edit emails</a></li>
                                 <li><a href="{% url 'dashboard' %}">Dashboard</a></li>
+                                <li><a href="{% url 'profile' %}">Profile</a></li>
                                 <li><a href="{% url 'account_logout' %}">Logout</a></li>
                             </ul>
                         </li>
