--- a/register/templates/profile.html
+++ b/register/templates/profile.html
@@ -1,54 +1,27 @@
-{% extends 'base.html' %}
-{% load static %}
-
+{% extends "base.html" %}
+{% load humanize %}
 {% load bootstrap3 %}
-{% block title %}Profile - {% endblock %}
+{% load static %}
+{% block title %}Vote applications - {% endblock %}
 {% block head %}
-    <link rel="stylesheet" href="{% static 'css/profile.css' %}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="{% static 'lib/bars-square.css' %}">
 {% endblock %}
-{% load utils %}
 {% block body %}
-    {% settings_value "STATIC_KEYS_TEMPLATES" as static_values %}
-
-    <div class="confirm-content">
-        <div class="col-md-12">
-            {% bootstrap_messages %}
+    <div class="row margin-top">
+        {% bootstrap_messages %}
+        <div class="col-md-6 col-md-offset-3">
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    <h3 class="panel-title">Welcome{% if user.hacker %} back {{ user.hacker.name }} {{ user.hacker.lastname }}{% endif %}</h3>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-4">
-            <div class="panel panel-default border-less">
-                <div class="panel-body no-padding">
-                    <div class="list-group">
-                        {% for phase in phases %}
-                            <a class="list-group-item {% if phase.finished %}finished{% elif phase.key != current.key %}disabled{% endif %} {% if phase.key == active.key %}active{% endif %}"
-                               href="{% if phase.finished or phase.key == current.key %}?phase={{ phase.key }}{% else %}#{% endif %}">
-                                {{ phase.title }}
-                            </a>
-                        {% endfor %}
-                    </div>
-
-                </div>
-                <div class="panel-footer">
-                    Errors? Help? Reach us {{ static_values.email|urlize }}
-                </div>
-            </div>
-        </div>
-        <div class="col-md-8">
-
-            <div class="panel panel-info">
-                <div class="panel-heading">
-                    <h3 class="panel-title">{{ active.title }}</h3>
+                    <h4 class="text-center">Hacker profile</h4>
                 </div>
                 <div class="panel-body">
+                    <p>Please fill your hacker information here before proceeding to your application.</p>
 
-                    {% include active.template %}
+                    {% include 'include/hacker_form.html' %}
+
                 </div>
             </div>
-
         </div>
     </div>
 {% endblock %}
