--- a/register/templates/include/hacker_form.html
+++ b/register/templates/include/hacker_form.html
@@ -1,6 +1,31 @@
 {% load bootstrap3 %}
+{% load static %}
 <form class="signup form-horizontal" enctype="multipart/form-data" id="signup_form" method="post" action="">
     {% csrf_token %}
     {% bootstrap_form hacker_form layout="horizontal" %}
-    {% buttons submit='Submit' layout='horizontal' %}{% endbuttons %}
+    {% buttons submit='Save' layout='horizontal' %}{% endbuttons %}
 </form>
+<script src="{% static 'lib/typeahead.min.js' %}"></script>
+
+<script>
+
+    $(function () {
+                $.ajax({
+                    type: "GET",
+                    url: "{% static 'schools.json' %}",
+                    dataType: "json"
+                }).done(function (res) {
+                   $(".typeahead-schools").typeahead({source: res});
+                }).fail(function (jqXHR, textStatus, errorThrown) {
+                    alert("AJAX call failed: " + textStatus + ", " + errorThrown);
+                });
+{#                debugger;#}
+{#                $.get("{% static 'schools.txt' %}", function (data) {#}
+{#                    debugger;#}
+{#                    console.log("TEST")#}
+{#                    $(".typeahead-schools").typeahead({source: data});#}
+{#                }, 'json');#}
+            }
+    )
+
+</script>
