remove some white texts

--- a/register/templates/404.html
+++ b/register/templates/404.html
@@ -10,7 +10,7 @@
 {% block title %}¯\_(ツ)_/¯ | Page not found {% endblock %}
 
 {% block body %}
-    <h1 class="text-center margin-top white-text">¯\_(ツ)_/¯</h1>
-    <h2  class="text-center white-text">404 Page not found</h2>
-    <p  class="text-center white-text">This specified file was not found on this website. Please check the URL for mistakes and try again.</p>
+    <h1 class="text-center margin-top">¯\_(ツ)_/¯</h1>
+    <h2  class="text-center">404 Page not found</h2>
+    <p  class="text-center">This specified file was not found on this website. Please check the URL for mistakes and try again.</p>
 {% endblock %}
