improve wait message

--- a/register/templates/phases/invited.html
+++ b/register/templates/phases/invited.html
@@ -30,5 +30,8 @@
     </p>
     {#    Message inspired by HackTheNorth rejection email... Tries to be positive :D #}
 {% else %}
-    <p>We have received your application. We'll get back to you very soon. You can still edit you hacker information.</p>
+    <p>We have received your application. Our team is already hard at work reading through all submitted applications!
+        When decisions are released, you'll be able to see your results on this page.
+        You can still edit your <a href="{% url 'profile' %}">profile</a> information.</p>
+    <p> If you have any questions or concerns, you can still reach us at  {{ static_values.email|urlize }}</p>
 {% endif %}
