--- a/register/templates/dashboard.html
+++ b/register/templates/dashboard.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% load bootstrap3 %}
-{% block title %}Profile - {% endblock %}
+{% block title %}Dashboard - {% endblock %}
 {% block head %}
     <link rel="stylesheet" href="{% static 'css/profile.css' %}">
 {% endblock %}
@@ -13,14 +13,12 @@
     <div class="confirm-content">
         <div class="col-md-12">
             {% bootstrap_messages %}
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    <h3 class="panel-title">Welcome{% if user.hacker %} back {{ user.hacker.name }} {{ user.hacker.lastname }}{% endif %}</h3>
-                </div>
-            </div>
         </div>
         <div class="col-md-4">
             <div class="panel panel-default border-less">
+             <div class="panel-heading">
+                    <h3 class="panel-title">{% if user.hacker %}{{ user.hacker.name }}'s{% endif %} Hacker Dashboard</h3>
+                </div>
                 <div class="panel-body no-padding">
                     <div class="list-group">
                         {% for phase in phases %}
