--- a/app/templates/account/verified_email_required.html
+++ b/app/templates/account/verified_email_required.html
@@ -15,7 +15,8 @@ verify ownership of your e-mail address. {% endblocktrans %}</p>
 
 <p>{% blocktrans %}We have sent an e-mail to you for
 verification. Please click on the link inside this e-mail. Please
-contact us if you do not receive it within a few minutes.{% endblocktrans %}</p>
+contact us if you do not receive it within a few minutes.
+Check your SPAM folder for the email just in case.{% endblocktrans %}</p>
 
 <p>{% blocktrans %}<strong>Note:</strong> you can still <a href="{{ email_url }}">change your e-mail address</a>.{% endblocktrans %}</p>
 
