add password restriction notice

--- a/app/templates/account/password_change.html
+++ b/app/templates/account/password_change.html
@@ -7,6 +7,8 @@
 {% block content %}
     <h1>{% trans "Change Password" %}</h1>
 
+    <p>Your password must have >= 8 characters and contain at least a number</p>
+
     <form method="POST" action="{% url 'account_change_password' %}" class="password_change form-horizontal">
         {% csrf_token %}
         {% bootstrap_form form layout="horizontal" %}
