update theme color

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -14,7 +14,7 @@
             integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
             crossorigin="anonymous"></script>
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
-    <meta name="theme-color" content="#E91753">
+    <meta name="theme-color" content="#494949">
     <meta name="author" content="{{ event_name }}">
     <link rel="icon" type="image/x-icon" href="{% static 'favicon.ico' %}"/>
     <meta name="description" content="{{ static_values.description }}">
